--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -28,7 +28,7 @@ import Form from './Form'
     </div>
 
     <div class='justify-self-end animate-fade animate-delay-200 w-full'>
-      <Form className='shadow-2xl mx-auto' client:load />
+      <Form className='md:w-full w-[90%] bg-zinc-100/90 py-6 px-8 rounded-lg shadow-2xl mx-auto' client:load />
     </div>
   </div>
 </section>
