--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -47,7 +47,7 @@ import Form from './Form'
         <Button href='https://wa.link/x6kwzt' type='secondary'>Línea WhatsApp</Button>
       </div>
       <div class='mx-auto'>
-        <Form className='mx-auto text-center' client:visible />
+        <Form className='md:w-full w-[90%] bg-zinc-100/90 py-6 px-8 rounded-lg mx-auto text-center' client:visible />
       </div>
     </div>
   </div>
