--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -133,5 +133,17 @@ const { title } = Astro.props
         })
       })
     </script>
+    <script
+      async
+      src='https://www.googletagmanager.com/gtag/js?id=AW-16461849907'></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'AW-16461849907')
+    </script>
   </body>
 </html>
