--- a/src/pages/thanks-you.astro
+++ b/src/pages/thanks-you.astro
@@ -9,11 +9,13 @@ import Layout from '../layouts/Layout.astro'
       style="background-image: url('/background/bg1.webp');"
       class='bg-no-repeat bg-right-top bg-cover md:bg-contain object-fill h-full'
     >
-      <div class='section py-72 h-screen  text-center'>
+      <div class='section py-72 h-screen text-center'>
         <h2 class='title'>¡Gracias Por Preferirnos!</h2>
         <p class='subtitle'>
-          ¡Listo! 🌟 Mensaje recibido con éxito. Nuestro asesor se pondrá en contacto contigo en breve. ¡Disfruta del servicio financiero de alta calidad que te ofrecemos! 💼✨ 
-          <br><br>
+          ¡Listo! 🌟 Mensaje recibido con éxito. Nuestro asesor se pondrá en
+          contacto contigo en breve. ¡Disfruta del servicio financiero de alta
+          calidad que te ofrecemos! 💼✨
+          <br /><br />
           🌟 ¡Gracias por confiar en nosotros! 🌟
         </p>
         <Button href='/' type='black'>Ir al Inicio</Button>
@@ -21,3 +23,9 @@ import Layout from '../layouts/Layout.astro'
     </div>
   </main>
 </Layout>
+
+<script is:inline>
+  gtag('event', 'conversion', {
+    send_to: 'AW-16461849907/gr1NCMaV45IZELPKz6k9'
+  })
+</script>
