--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -27,10 +27,14 @@
       </div>
       <div class='p-5 py-8'>
         <h3 class='title'>Porque Somos la Mejor Opción en Créditos Online</h3>
-        <p class='text-left w-full font-openSans pb-8'>
+        <p class='text-left w-full font-openSans pb-6'>
           🌟 ¡Descubre la facilidad de obtener créditos en línea con nosotros!
           Sin complicaciones, solo soluciones.
         </p>
+        <p class="pb-4"><strong>Tasa de Intereés</strong> 0,2% mensual</p>
+        <p class="pb-4">$2'000.000 a 24 meses = $108.333</p>
+        <p class="pb-4">$50'000.000 a 84 meses = $620.239</p>
+        <p class="pb-8">$100'000.000 a 120 meses = $859.333</p>
         <div class='grid grid-rows-2 gap-6'>
           <div class='py-7 px-6 flex'>
             <svg
