--- a/src/components/Feature.astro
+++ b/src/components/Feature.astro
@@ -2,13 +2,12 @@
 import FeatureBox from './FeatureBox.astro'
 ---
 
-<section id='saber-mas' class='section pt-72 md:pt-16 pb-20 text-center'>
+<section id='saber-mas' class='section pt-[480px] md:pt-16 pb-20 text-center'>
   <h2 class='title'>Sistema de Préstamos Rápidos</h2>
   <p class='subtitle'>
     🚀 ¡Descubre la libertad financiera con nuestros préstamos en línea! Rápido,
     fácil y seguro.
   </p>
-
   <div class='grid md:grid-cols-3 grid-cols-1 gap-8'>
     <FeatureBox
       img='/features/iconFB1.svg'
