--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -17,10 +17,14 @@ import Form from './Form'
       <h1 class='md:text-4xl text-3xl font-bold mb-5'>
         ¡Desata tu Potencial Financiero! Con Nuestros Créditos en Línea
       </h1>
-      <p class='lg:text-2xl md:text-xl text-gray-700 mb-16'>
+      <p class='lg:text-2xl md:text-xl text-gray-700 mb-6'>
         💰 ¡Haz realidad tus sueños ahora con nuestros créditos en línea! 💸 ¡La
         mejor manera de financiar tus proyectos!
       </p>
+      <p class="pb-2"><strong>TAE</strong> 0,2% mensual</p>
+      <p class="pb-2">$2'000.000 a 24 meses = $108.333</p>
+      <p class="pb-2">$50'000.000 a 84 meses = $620.239</p>
+      <p class="pb-8">$100'000.000 a 120 meses = $859.333</p>
       <div>
         <Button href='' type='black'>Saber Más</Button>
         <Button href='/contactenos' type='transparent' class='ml-3'>Contáctenos</Button>
