--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -21,10 +21,9 @@ import Form from './Form'
         💰 ¡Haz realidad tus sueños ahora con nuestros créditos en línea! 💸 ¡La
         mejor manera de financiar tus proyectos!
       </p>
-      <p class="pb-2"><strong>TAE</strong> 0,2% mensual</p>
-      <p class="pb-2">$2'000.000 a 24 meses = $108.333</p>
-      <p class="pb-2">$50'000.000 a 84 meses = $620.239</p>
-      <p class="pb-8">$100'000.000 a 120 meses = $859.333</p>
+      <p class="pb-2">El <strong>TAE</strong> 6,5% Anual</p>
+      <p class="pb-2">Prestamos de $2'000.000 a $900'000.000</p>
+      <p class="pb-8">Plazo de finalización de 12 meses a 180 meses</p>
       <div>
         <Button href='' type='black'>Saber Más</Button>
         <Button href='/contactenos' type='transparent' class='ml-3'>Contáctenos</Button>
