--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -41,7 +41,7 @@ import Logo from './Logo.astro'
               <a href='tel:+573222576033' class='hover:underline'>3222576033</a>
             </li>
             <li>
-              <a href='https://wa.link/x6kwzt' class='hover:underline'>WhatsApp</a>
+              <a href='https://wa.link/jb525l' class='hover:underline'>WhatsApp</a>
             </li>
           </ul>
         </div>
