--- a/src/components/Solution.astro
+++ b/src/components/Solution.astro
@@ -44,7 +44,7 @@ import Form from './Form'
         </p>
 
         <Button href='tel:+573222576033' type='black' class='mb-5 px-10'>Llamar Asesor</Button>
-        <Button href='https://wa.link/jb525l' type='secondary'>Línea WhatsApp</Button>
+        <Button href='https://wa.link/1uh5mh' type='secondary'>Línea WhatsApp</Button>
       </div>
       <div class='mx-auto'>
         <Form className='md:w-full w-[90%] bg-zinc-100/90 py-6 px-8 rounded-lg mx-auto text-center' client:visible />
